--- a/packages/saas-ui-auth/package.json
+++ b/packages/saas-ui-auth/package.json
@@ -59,6 +59,7 @@
   },
   "dependencies": {
     "@chakra-ui/utils": "^2.2.1",
+    "@saas-ui/auth-provider": "workspace:*",
     "@saas-ui/core": "workspace:*",
     "@saas-ui/forms": "workspace:*",
     "@saas-ui/hooks": "workspace:*"
