--- a/packages/saas-ui-auth0/package.json
+++ b/packages/saas-ui-auth0/package.json
@@ -56,14 +56,10 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
-    "@saas-ui/auth": "workspace:*"
+    "@saas-ui/auth-provider": "workspace:*"
   },
   "peerDependencies": {
     "@auth0/auth0-spa-js": "^2.1.3",
-    "@chakra-ui/react": ">=2.9.0 <3",
-    "@emotion/react": ">=11.0.0",
-    "@emotion/styled": ">=11.0.0",
-    "framer-motion": ">=6.0.0",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0"
   },
