--- a/packages/saas-ui-clerk/package.json
+++ b/packages/saas-ui-clerk/package.json
@@ -57,18 +57,11 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
-    "@saas-ui/auth": "workspace:*"
+    "@clerk/types": "^4.28.0",
+    "@saas-ui/auth-provider": "workspace:*"
   },
   "peerDependencies": {
-    "@chakra-ui/react": ">=2.9.0 <3",
-    "@clerk/clerk-react": ">=4.12.0 <=4.18.0",
-    "@emotion/react": ">=11.4.1",
-    "@emotion/styled": ">=11.3.0",
-    "framer-motion": ">=6.0.0",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0"
-  },
-  "devDependencies": {
-    "@clerk/clerk-react": "4.32.3"
   }
 }
