--- a/packages/saas-ui-supabase/package.json
+++ b/packages/saas-ui-supabase/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@saas-ui/supabase",
   "version": "2.3.0",
-  "description": "Saas UI Supabase integration",
+  "description": "Saas UI Supabase Auth integration",
   "source": "src/index.ts",
   "exports": {
     ".": {
@@ -59,14 +59,10 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
-    "@saas-ui/auth": "^3.5.0"
+    "@saas-ui/auth-provider": "workspace:*"
   },
   "peerDependencies": {
-    "@chakra-ui/react": ">=2.9.0 <3",
-    "@emotion/react": ">=11.0.0",
-    "@emotion/styled": ">=11.0.0",
     "@supabase/supabase-js": "^2.45.4",
-    "framer-motion": ">=6.0.0",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0"
   },
