--- a/packages/saas-ui-core/package.json
+++ b/packages/saas-ui-core/package.json
@@ -105,11 +105,10 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
+    "@ark-ui/react": "^4.2.0",
     "@chakra-ui/hooks": "^3.0.0-next.23",
-    "@chakra-ui/utils": "^3.0.0-next.23",
     "@react-aria/interactions": "^3.22.4",
     "@react-aria/utils": "^3.25.3",
-    "@saas-ui/react-utils": "workspace:*",
     "@saas-ui/theme": "workspace:*",
     "@zag-js/dom-event": "^0.75.0",
     "@zag-js/dom-utils": "^0.2.4"
