--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/react": "^3.0.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fontsource-variable/inter": "^5.1.0",
     "@saas-ui/core": "workspace:*",
     "@saas-ui/react": "workspace:*",
     "@saas-ui/storybook-addon": "workspace:*",
