--- a/packages/saas-ui-core/package.json
+++ b/packages/saas-ui-core/package.json
@@ -122,6 +122,7 @@
   "devDependencies": {
     "@chakra-ui/react": "^3.0.2",
     "@react-types/shared": "^3.25.0",
+    "jotai": "^2.10.1",
     "react-icons": "^5.3.0",
     "tsup": "^8.3.5"
   }
