feat: update modals

--- a/packages/saas-ui-auth-provider/package.json
+++ b/packages/saas-ui-auth-provider/package.json
@@ -31,7 +31,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "author": "Eelco Wiersma <eelco@appulse.nl>",
+  "author": "Eelco Wiersma <eelco@saas-ui.dev>",
   "license": "MIT",
   "homepage": "https://saas-ui.dev/",
   "repository": {
