--- a/packages/saas-ui-forms/zod/package.json
+++ b/packages/saas-ui-forms/zod/package.json
@@ -16,7 +16,7 @@
   "main": "../dist/zod/index.js",
   "module": "../dist/zod/index.mjs",
   "types": "../dist/zod/index.d.ts",
-  "author": "Eelco Wiersma <eelco@appulse.nl>",
+  "author": "Eelco Wiersma <eelco@saas-ui.dev>",
   "license": "MIT",
   "peerDependencies": {
     "@saas-ui/modals": "*",
