--- a/packages/saas-ui-modals-provider/package.json
+++ b/packages/saas-ui-modals-provider/package.json
@@ -1,42 +1,22 @@
 {
-  "name": "@saas-ui/theme-glass",
-  "version": "0.5.5",
-  "description": "A Linear inspired Chakra UI theme",
+  "name": "@saas-ui/modals-provider",
+  "version": "0.0.1",
+  "description": "A UI library agnostic modal manager for React",
   "source": "src/index.ts",
   "exports": {
     ".": {
-      "require": "./dist/index.js",
+      "sui": "./src/index.ts",
       "types": "./dist/index.d.ts",
+      "require": "./dist/index.js",
       "import": "./dist/index.mjs"
-    },
-    "./components": {
-      "require": "./dist/components/index.js",
-      "types": "./dist/components/index.d.ts",
-      "import": "./dist/components/index.mjs"
-    },
-    "./src": {
-      "default": "./src/index.ts"
-    },
-    "./src/components": {
-      "default": "./src/components/index.ts"
-    }
-  },
-  "typesVersions": {
-    "*": {
-      "*": [
-        "dist/index.d.ts"
-      ],
-      "components": [
-        "dist/components/index.d.ts"
-      ]
     }
   },
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "clean": "rimraf --no-glob ./dist",
-    "build": "tsup src/index.ts src/components/index.ts --config tsup.config.ts",
+    "clean": "rimraf dist",
+    "build": "tsup --config tsup.config.ts",
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx --config ../../.eslintrc.js",
     "lint:staged": "lint-staged --allow-empty --config ../../lint-staged.config.js",
     "typecheck": "tsc --noEmit"
@@ -55,33 +35,26 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/saas-js/saas-ui.git",
-    "directory": "packages/saas-ui-theme-glass"
+    "directory": "packages/saas-ui-modals-provider"
   },
   "keywords": [
     "react",
     "ui",
-    "chakra-ui",
     "design-system",
     "react-components",
     "uikit",
     "accessible",
     "components",
-    "emotion",
     "library",
-    "theme"
+    "modals",
+    "dialogs"
   ],
   "storybook": {
     "title": "Saas UI",
-    "url": "https://storybook.saas-ui.pro"
+    "url": "https://storybook.saas-ui.dev"
   },
   "peerDependencies": {
-    "@chakra-ui/react": "^3.0.0",
-    "@emotion/react": ">=11.1.5",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0"
-  },
-  "devDependencies": {
-    "@saas-ui/react": "workspace:*",
-    "react-icons": "^5.3.0"
   }
 }
