--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -17,10 +17,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@ark-ui/react": "^4.1.0",
-    "@chakra-ui/next-js": "^2.4.1",
-    "@chakra-ui/props-docs": "^2.4.1",
-    "@chakra-ui/react": "^2.10.1",
+    "@ark-ui/react": "^4.3.0",
+    "@chakra-ui/next-js": "^2.4.3",
+    "@chakra-ui/props-docs": "^2.4.3",
+    "@chakra-ui/react": "^2.10.4",
     "@chakra-ui/react-env": "^3.1.0",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
@@ -34,6 +34,7 @@
     "@next/bundle-analyzer": "^14.2.14",
     "@octokit/rest": "^21.0.2",
     "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@saas-ui-pro/react": "workspace:*",
     "@saas-ui/command-bar": "workspace:^",
     "@saas-ui/file-upload": "workspace:*",
     "@saas-ui/forms": "workspace:*",
