--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   },
   "workspaces": [
     "apps/*",
-    "packages/pro/saas-ui/*",
+    "packages/pro/packages/*",
     "packages/storybook",
     "packages/saas-ui-*",
     "tooling/next-workspaces",
@@ -71,8 +71,8 @@
     "tooling/storybook-addon"
   ],
   "devDependencies": {
-    "@chakra-ui/cli": "^2.5.4",
-    "@chakra-ui/react": "^2.10.1",
+    "@chakra-ui/cli": "^2.5.6",
+    "@chakra-ui/react": "^2.10.4",
     "@changesets/cli": "^2.27.9",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
