--- a/packages/saas-ui-nprogress/package.json
+++ b/packages/saas-ui-nprogress/package.json
@@ -3,18 +3,23 @@
   "version": "2.0.3",
   "description": "Nprogress Component",
   "source": "src/index.ts",
+  "type": "module",
   "exports": {
     ".": {
-      "require": "./dist/index.js",
+      "sui": "./src/index.ts",
+      "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs"
+      "import": "./dist/index.js"
     },
-    "./src": {
-      "default": "./src/index.ts"
+    "./next-pages-router": {
+      "sui": "./src/next-pages-router.tsx",
+      "require": "./dist/next-pages-router.cjs",
+      "types": "./dist/next-pages-router.d.ts",
+      "import": "./dist/next-pages-router.js"
     }
   },
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "clean": "rimraf --no-glob ./dist",
@@ -60,6 +65,8 @@
     "@tanem/react-nprogress": "^5.0.52"
   },
   "peerDependencies": {
+    "@chakra-ui/react": "^3.1.1",
+    "@saas-ui/core": "workspace:*",
     "react": ">=18.0.0",
     "react-dom": ">=18.0.0"
   }
