--- a/packages/saas-ui-charts/package.json
+++ b/packages/saas-ui-charts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/charts",
-  "version": "0.11.3",
+  "version": "0.14.1",
   "exports": {
     ".": {
       "require": "./dist/index.js",
@@ -28,17 +28,18 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "recharts": "^2.13.2"
+    "@chakra-ui/styled-system": "^2.12.1",
+    "recharts": "^2.13.0"
   },
   "peerDependencies": {
-    "@chakra-ui/react": ">=2.4.8",
+    "@chakra-ui/react": ">=2.9.0 <3",
     "@emotion/react": ">=11",
     "react": ">=18",
     "react-dom": ">=18"
   },
   "devDependencies": {
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.6.0",
     "prop-types": "^15.8.1",
-    "tsup": "^8.3.5"
+    "tsup": "^8.3.0"
   }
 }
