--- a/packages/saas-ui-core/package.json
+++ b/packages/saas-ui-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/core",
-  "version": "2.5.5",
+  "version": "3.0.0-alpha.0",
   "description": "Unstyled primitives for building React applications.",
   "type": "module",
   "exports": {
