--- a/packages/saas-ui-modals/package.json
+++ b/packages/saas-ui-modals/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/modals",
-  "version": "2.4.1",
+  "version": "3.0.0-alpha.0",
   "description": "A modal manager for Chakra UI",
   "source": "src/index.ts",
   "type": "module",
