--- a/packages/saas-ui-charts/package.json
+++ b/packages/saas-ui-charts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/charts",
-  "version": "0.14.1",
+  "version": "1.0.0-alpha.0",
   "exports": {
     ".": {
       "require": "./dist/index.js",
