--- a/packages/saas-ui-hooks/package.json
+++ b/packages/saas-ui-hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/hooks",
-  "version": "2.0.3",
+  "version": "3.0.0-alpha.0",
   "description": "Saas UI react hooks",
   "source": "src/index.ts",
   "exports": {
