--- a/packages/saas-ui-nprogress/package.json
+++ b/packages/saas-ui-nprogress/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/nprogress",
-  "version": "2.0.3",
+  "version": "3.0.0-alpha.0",
   "description": "Nprogress Component",
   "source": "src/index.ts",
   "type": "module",
