--- a/packages/saas-ui-react/package.json
+++ b/packages/saas-ui-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/react",
-  "version": "2.8.9",
+  "version": "3.0.0-alpha.0",
   "description": "Saas UI - The React component library for startups.",
   "source": "src/index.ts",
   "type": "module",
