--- a/packages/saas-ui-supabase/package.json
+++ b/packages/saas-ui-supabase/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/supabase",
-  "version": "2.4.0",
+  "version": "3.0.0-alpha.0",
   "description": "Saas UI Supabase Auth integration",
   "source": "src/index.ts",
   "exports": {
