--- a/packages/saas-ui-use-hotkeys/package.json
+++ b/packages/saas-ui-use-hotkeys/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/use-hotkeys",
-  "version": "1.1.3",
+  "version": "2.0.0-alpha.0",
   "description": "Easy to use and scalable keyboard shortcuts for React.",
   "source": "src/index.ts",
   "exports": {
