--- a/tooling/props-docs/package.json
+++ b/tooling/props-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/props-docs",
-  "version": "2.3.3",
+  "version": "3.0.0-alpha.0",
   "description": "Extracts prop types for documentation purposes",
   "keywords": [
     "docs",
