--- a/tooling/storybook-addon/package.json
+++ b/tooling/storybook-addon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/storybook-addon",
-  "version": "3.0.2",
+  "version": "4.0.0-alpha.0",
   "description": "The official Storybook Addon for Saas UI",
   "type": "module",
   "main": "dist/index.js",
@@ -80,7 +80,7 @@
   },
   "peerDependencies": {
     "@chakra-ui/react": ">=2.0.0",
-    "@saas-ui/react": ">=2.8.9",
+    "@saas-ui/react": ">=3.0.0-alpha.0",
     "@storybook/components": ">=8.0.0",
     "@storybook/manager-api": ">=8.0.0",
     "@storybook/preview-api": ">=8.0.0",
