--- a/packages/saas-ui-react/package.json
+++ b/packages/saas-ui-react/package.json
@@ -27,7 +27,7 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "clean": "rimraf --no-glob ./dist",
-    "build": "tsup src/index.ts --config tsup.config.ts",
+    "build": "NODE_OPTIONS='--max-old-space-size=16384' tsup --config tsup.config.ts",
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx --config ../../.eslintrc.js",
     "lint:staged": "lint-staged --allow-empty --config ../../lint-staged.config.js",
     "typecheck": "tsc --noEmit"
@@ -75,6 +75,7 @@
     "react-dom": ">=18"
   },
   "devDependencies": {
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "tsup": "^8.3.5"
   }
 }
