--- a/packages/saas-ui-core/package.json
+++ b/packages/saas-ui-core/package.json
@@ -59,8 +59,7 @@
     "typecheck": "tsc --noEmit"
   },
   "files": [
-    "dist",
-    "src"
+    "dist"
   ],
   "sideEffects": false,
   "publishConfig": {
