--- a/packages/saas-ui-clerk/package.json
+++ b/packages/saas-ui-clerk/package.json
@@ -2,15 +2,12 @@
   "name": "@saas-ui/clerk",
   "version": "4.0.0",
   "description": "Clerk Authentication Service for Saas UI",
-  "source": "src/index.ts",
   "exports": {
     ".": {
+      "sui": "./src/index.ts",
       "require": "./dist/index.js",
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs"
-    },
-    "./src": {
-      "default": "./src/index.ts"
     }
   },
   "main": "./dist/index.js",
@@ -24,8 +21,7 @@
     "typecheck": "tsc --noEmit"
   },
   "files": [
-    "dist",
-    "src"
+    "dist"
   ],
   "sideEffects": false,
   "publishConfig": {
