--- a/packages/saas-ui-modals-provider/package.json
+++ b/packages/saas-ui-modals-provider/package.json
@@ -2,7 +2,6 @@
   "name": "@saas-ui/modals-provider",
   "version": "0.0.1",
   "description": "A UI library agnostic modal manager for React",
-  "source": "src/index.ts",
   "exports": {
     ".": {
       "sui": "./src/index.ts",
@@ -22,8 +21,7 @@
     "typecheck": "tsc --noEmit"
   },
   "files": [
-    "dist",
-    "src"
+    "dist"
   ],
   "sideEffects": false,
   "publishConfig": {
