feat: upgrade to chakra 3.2.1

--- a/packages/saas-ui-react/tsconfig.json
+++ b/packages/saas-ui-react/tsconfig.json
@@ -5,7 +5,8 @@
     "baseUrl": ".",
     "customConditions": ["sui"],
     "paths": {
-      "#components/*": ["src/components/*"]
+      "#components/*": ["src/components/*"],
+      "compositions/*": ["../../apps/compositions/src/*"]
     }
   },
   "include": ["src/**/*"],
