--- a/packages/saas-ui-react/tsconfig.json
+++ b/packages/saas-ui-react/tsconfig.json
@@ -1,17 +1,26 @@
 {
-  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "lib": ["DOM", "ESNext"],
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "jsx": "react-jsx",
     "baseUrl": ".",
     "customConditions": ["sui"],
+    "incremental": true,
+    "tsBuildInfoFile": "dist/.tsbuildinfo.json",
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    "allowImportingTsExtensions": true,
+    "strict": true,
+    "skipLibCheck": true,
     "paths": {
       "#components/*": ["src/components/*"],
       "compositions/*": ["../../apps/compositions/src/*"]
     }
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": [
-    "src/tests",
     "**/*.spec.ts",
     "**/*.spec.tsx",
     "**/*.test.ts",
