--- a/packages/saas-ui-react/package.json
+++ b/packages/saas-ui-react/package.json
@@ -69,11 +69,12 @@
     "url": "https://storybook.saas-ui.dev"
   },
   "dependencies": {
+    "@ark-ui/react": "^4.4.4",
     "@saas-ui/core": "workspace:*",
     "@saas-ui/hooks": "workspace:*"
   },
   "peerDependencies": {
-    "@chakra-ui/react": "^3.2.1",
+    "@chakra-ui/react": "^3.2.2",
     "@emotion/react": "^11",
     "react": ">=18",
     "react-dom": ">=18"
