--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "unist-util-visit": "4.0.0",
     "react": "18.2.0",
     "@emotion/react": "11.11.1",
-    "@chakra-ui/react": "https://pkg.pr.new/chakra-ui/chakra-ui/@chakra-ui/react@9240#2"
+    "@chakra-ui/react": "3.2.2"
   },
   "packageManager": "yarn@4.2.2"
 }
