--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "apps/v3",
     "apps/compositions",
     "packages/storybook",
+    "packages/pro/packages/*",
     "packages/saas-ui-*",
     "tooling/next-workspaces",
     "tooling/test-utils",
