feat: improve command and tooltips

--- a/packages/saas-ui-react/tsconfig.json
+++ b/packages/saas-ui-react/tsconfig.json
@@ -16,6 +16,7 @@
     "skipLibCheck": true,
     "paths": {
       "#components/*": ["src/components/*"],
+      "#types": ["src/types.ts"],
       "compositions/*": ["../../apps/compositions/src/*"]
     }
   },
