feat: support custom auth props

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,5 +17,5 @@
     "downlevelIteration": true,
     "declarationMap": true
   },
-  "exclude": ["node_modules", "**/node_modules"]
+  "exclude": ["**/node_modules"]
 }
