feat: add data list and tabs

--- a/package.json
+++ b/package.json
@@ -105,7 +105,8 @@
   "resolutions": {
     "unist-util-visit": "4.0.0",
     "react": "18.2.0",
-    "@emotion/react": "11.11.1"
+    "@emotion/react": "11.11.1",
+    "@chakra-ui/react": "3.3.0"
   },
   "packageManager": "yarn@4.2.2"
 }
