--- a/package.json
+++ b/package.json
@@ -106,7 +106,8 @@
     "unist-util-visit": "4.0.0",
     "react": "18.2.0",
     "@emotion/react": "11.11.1",
-    "@chakra-ui/react": "3.3.0"
+    "@chakra-ui/react": "3.2.4",
+    "@ark-ui/react": "4.4.4"
   },
   "packageManager": "yarn@4.2.2"
 }
