--- a/package.json
+++ b/package.json
@@ -104,10 +104,11 @@
   },
   "resolutions": {
     "unist-util-visit": "4.0.0",
-    "react": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "@emotion/react": "11.11.1",
     "@chakra-ui/react": "3.2.4",
     "@ark-ui/react": "4.4.4"
   },
-  "packageManager": "yarn@4.2.2"
+  "packageManager": "yarn@4.6.0"
 }
