--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -37,7 +37,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "typescript": "^5.6.3",
-    "vite": "^5.4.11"
+    "vite": "^5.4.11",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "storybook": "8.4.5"
