--- a/packages/saas-ui-react-panda/package.json
+++ b/packages/saas-ui-react-panda/package.json
@@ -62,7 +62,7 @@
   "dependencies": {
     "@ark-ui/react": "^4.8.1",
     "@saas-ui/core": "workspace:*",
-    "@saas-ui/panda": "workspace:*",
+    "@saas-ui/panda-preset": "workspace:*",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0"
