--- a/packages/saas-ui-panda-preset/package.json
+++ b/packages/saas-ui-panda-preset/package.json
@@ -44,7 +44,7 @@
   "scripts": {
     "dev": "concurrently \"panda codegen --watch\" \"tsup src/index.ts --config tsup.config.ts --watch\"",
     "clean": "rimraf --no-glob ./dist",
-    "sync": "bun scripts/sync.ts",
+    "sync": "tsx scripts/sync.ts",
     "build": "panda codegen && tsup src/index.ts --config tsup.config.ts",
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx --config ../../.eslintrc.js",
     "lint:staged": "lint-staged --allow-empty --config ../../lint-staged.config.js",
