--- a/packages/saas-ui-panda-preset/package.json
+++ b/packages/saas-ui-panda-preset/package.json
@@ -1,42 +1,12 @@
 {
   "name": "@saas-ui/panda-preset",
   "description": "The styled system for Saas UI panda",
+  "type": "module",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "require": "./dist/index.js",
+      "require": "./dist/index.cjs",
       "import": "./dist/index.js"
-    },
-    "./css": {
-      "types": "./styled-system/css/index.d.ts",
-      "require": "./styled-system/css/index.js",
-      "import": "./styled-system/css/index.js"
-    },
-    "./tokens": {
-      "types": "./styled-system/tokens/index.d.ts",
-      "require": "./styled-system/tokens/index.js",
-      "import": "./styled-system/tokens/index.js"
-    },
-    "./types": {
-      "types": "./styled-system/types/index.d.ts"
-    },
-    "./types/*": {
-      "types": "./styled-system/types/*.d.ts"
-    },
-    "./patterns": {
-      "types": "./styled-system/patterns/index.d.ts",
-      "require": "./styled-system/patterns/index.js",
-      "import": "./styled-system/patterns/index.js"
-    },
-    "./recipes": {
-      "types": "./styled-system/recipes/index.d.ts",
-      "require": "./styled-system/recipes/index.js",
-      "import": "./styled-system/recipes/index.js"
-    },
-    "./jsx": {
-      "types": "./styled-system/jsx/index.d.ts",
-      "require": "./styled-system/jsx/index.js",
-      "import": "./styled-system/jsx/index.js"
     }
   },
   "private": true,
@@ -45,14 +15,14 @@
     "dev": "concurrently \"panda codegen --watch\" \"tsup src/index.ts --config tsup.config.ts --watch\"",
     "clean": "rimraf --no-glob ./dist",
     "sync": "tsx scripts/sync.ts",
-    "build": "panda codegen && tsup src/index.ts --config tsup.config.ts",
+    "build": "tsup src/index.ts --config tsup.config.ts",
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx --config ../../.eslintrc.js",
     "lint:staged": "lint-staged --allow-empty --config ../../lint-staged.config.js",
     "typecheck": "tsc --noEmit"
   },
   "source": "src/index.ts",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
@@ -64,15 +34,14 @@
   },
   "author": "ImExoOdeex <odeex722@gmail.com>",
   "dependencies": {
-    "@pandacss/dev": "^0.51.1",
-    "globby": "^14.1.0"
+    "@pandacss/dev": "^0.51.1"
   },
   "devDependencies": {
     "@chakra-ui/react": "^3.8.0",
     "@emotion/react": "^11.14.0",
     "concurrently": "^9.1.2",
+    "globby": "^14.1.0",
     "tsup": "^8.3.5",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.3"
+    "tsx": "^4.19.2"
   }
 }
