--- a/packages/saas-ui-react-panda/package.json
+++ b/packages/saas-ui-react-panda/package.json
@@ -2,25 +2,40 @@
   "name": "@saas-ui/react-panda",
   "version": "2.11.3",
   "description": "Saas UI - The React component library for startups.",
+  "type": "module",
   "exports": {
     ".": {
+      "sui": "./src/index.ts",
       "types": "./dist/index.d.ts",
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs"
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.js"
     },
-    "./src": {
-      "default": "./src/index.ts"
+    "./recipes/*": {
+      "types": "./styled-system/recipes/*.d.ts",
+      "require": "./styled-system/recipes/*.js",
+      "import": "./styled-system/recipes/*.js"
+    },
+    "./components/*": {
+      "types": "./dist/components/*.d.ts",
+      "require": "./dist/components/*.cjs",
+      "import": "./dist/components/*.js"
+    },
+    "./styled-system/*": {
+      "types": "./styled-system/*.d.ts",
+      "require": "./styled-system/*.js",
+      "import": "./styled-system/*.js"
     }
   },
   "source": "src/index.ts",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "prepare": "panda codegen",
+    "ship": "panda ship --outfile dist/panda.buildinfo.json",
     "dev": "tsup src/index.ts --config tsup.config.ts --watch",
     "clean": "rimraf --no-glob ./dist",
-    "build": "tsup src/index.ts --config tsup.config.ts",
+    "build": "panda codegen && tsup src/index.ts --config tsup.config.ts && yarn ship",
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx --config ../../.eslintrc.js",
     "lint:staged": "lint-staged --allow-empty --config ../../lint-staged.config.js",
     "typecheck": "tsc --noEmit",
@@ -29,7 +44,7 @@
   },
   "files": [
     "dist",
-    "src"
+    "styled-system"
   ],
   "sideEffects": false,
   "publishConfig": {
@@ -69,6 +84,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "3.2.4",
+    "@pandacss/dev": "^0.51.1",
     "@storybook/addon-a11y": "8.5.1",
     "@storybook/addon-essentials": "8.5.1",
     "@storybook/addon-interactions": "8.5.1",
@@ -83,6 +99,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "storybook": "8.5.1",
+    "tsup": "^8.3.5",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
