--- a/apps/compositions/package.json
+++ b/apps/compositions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chakra-ui/compositions",
-  "version": "1.0.0",
+  "version": "1.0.1-next.0",
   "description": "Registry for component compositions",
   "scripts": {
     "typecheck": "tsc --noEmit"
