--- a/packages/saas-ui-assets/package.json
+++ b/packages/saas-ui-assets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/assets",
-  "version": "1.1.0",
+  "version": "2.0.0-next.0",
   "description": "Saas UI assets",
   "source": "src/index.ts",
   "exports": {
