--- a/packages/saas-ui-auth-provider/package.json
+++ b/packages/saas-ui-auth-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/auth-provider",
-  "version": "1.1.0",
+  "version": "2.0.0-next.0",
   "description": "Authentication provider primivites",
   "exports": {
     ".": {
