--- a/packages/saas-ui-auth0/package.json
+++ b/packages/saas-ui-auth0/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/auth0",
-  "version": "0.3.3",
+  "version": "1.0.0-next.0",
   "description": "Auth0 authentication for Saas UI",
   "exports": {
     ".": {
