--- a/packages/saas-ui-charts/package.json
+++ b/packages/saas-ui-charts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/charts",
-  "version": "0.15.0",
+  "version": "1.0.0-next.0",
   "exports": {
     ".": {
       "sui": "./src/index.ts",
