--- a/packages/saas-ui-clerk/package.json
+++ b/packages/saas-ui-clerk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/clerk",
-  "version": "4.0.3",
+  "version": "5.0.0-next.0",
   "description": "Clerk Authentication Service for Saas UI",
   "exports": {
     ".": {
