--- a/packages/saas-ui-forms/package.json
+++ b/packages/saas-ui-forms/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/forms",
-  "version": "2.11.0",
+  "version": "3.0.0-next.0",
   "description": "Fully functional forms for Chakra UI.",
   "exports": {
     ".": {
