--- a/packages/saas-ui-nprogress/package.json
+++ b/packages/saas-ui-nprogress/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/nprogress",
-  "version": "2.2.1",
+  "version": "3.0.0-next.0",
   "description": "Nprogress Component",
   "type": "module",
   "exports": {
