--- a/packages/saas-ui-react/package.json
+++ b/packages/saas-ui-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saas-ui/react",
-  "version": "2.11.4",
+  "version": "3.0.0-next.0",
   "description": "Saas UI - The React component library for startups.",
   "type": "module",
   "exports": {
