--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -1,7 +1,7 @@
 {
   "name": "saas-ui-storybook",
   "type": "module",
-  "version": "2.1.12",
+  "version": "3.0.0-next.0",
   "scripts": {
     "dev": "storybook dev -p 6006 --debug",
     "build": "storybook build --debug --loglevel verbose"
