--- a/apps/compositions/tsconfig.json
+++ b/apps/compositions/tsconfig.json
@@ -12,7 +12,8 @@
     "paths": {
       "compositions/*": ["./src/*"],
       "@saas-ui/react": ["../packages/saas-ui-react/src/index.ts"],
-      "@saas-ui/react/*": ["../packages/saas-ui-react/src/components/*"]
+      "@saas-ui/react/*": ["../packages/saas-ui-react/src/components/*"],
+      "@saas-ui/forms": ["../packages/saas-ui-forms/src/index.ts"]
     }
   }
 }
