--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -29,6 +29,7 @@
       "@saas-ui/charts": ["../../packages/saas-ui-charts/src/index.ts"],
       "@saas-ui/core": ["../../packages/saas-ui-core/src/index.ts"],
       "@saas-ui/core/utils": ["../../packages/saas-ui-core/src/utils/index.ts"],
+      "@saas-ui/core/*": ["../../packages/saas-ui-core/src/components/*"],
       "@saas-ui/assets": ["../../packages/saas-ui-assets/src/index.ts"]
     },
     "target": "ES2017"
